Implement accessible kSetValue action for web content.

This hooks up support for the MSAA put_accValue interface.
Also refactors BrowserAccessibility::AccessibilityPerformAction
to use a switch instead of a bunch of if statements.

Bug: 828946
Change-Id: Ia9169a3156428ae371953f9cbad9c2c72311bd8f
Reviewed-on: https://chromium-review.googlesource.com/996178
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548166}
Former-commit-id: df135a725997fc66af170fd05b3916537d5d0cdd